unpackaged/objects/Contract.object
<CustomObject>
  <fields>
    <fullName>Discount_to_Approve__c</fullName>
    <description>The Discount that needs to be approved. Depending on the value in this field, different individuals might need to approve</description>
    <formula>VALUE(TEXT(Contract_Discount__c))/100 - Max_Approved_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Discount that needs to be approved. Depending on the value in this field, different individuals might need to approve</inlineHelpText>
    <label>Discount to Approve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TFUS-000003033</description>
    <label>Distributor</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Account.OneAccount_Type__c</field>
        <operation>equals</operation>
        <value>Distributor, DNA Distributor</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>ERP_Contract_Number__c</fullName>
    <description>Used to enter the Contract ERP Number manually. Needed for contracts that is not integrated and will contain mainly the same information as Movex Contract Number which is today integrated from Movex. The two should be aligned potentially in the future</description>
    <inlineHelpText>Enter the Contract Number from the ERP System</inlineHelpText>
    <label>ERP Contract Number</label>
    <length>18</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ERP_Number__c</fullName>
    <label>ERP Account Number</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>FulfillmentTime_Elapsed_Ratio__c</fullName>
    <formula>Contract_Fulfilment__c/Contract_Time_Elapsed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment/Time Elapsed Ratio (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>GDWUniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>GDW Unique Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>General_practitioner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General practitioner?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Implant_commitment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Implant commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Implant_commitment_abs__c</fullName>
    <formula>VALUE(TEXT(Implant_commitment_perc_input__c)) *0.01* IF(Implant_forecast__c &gt;0, Implant_forecast__c, Implant_volume_L12M__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implant commitment (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Implant_commitment_perc__c</fullName>
    <formula>IF(
IF( Implant_forecast__c &gt;0, Implant_forecast__c, Implant_volume_L12M__c)
*VALUE(TEXT(Implant_commitment_perc_input__c))*0.01 &gt; IF( General_practitioner__c = true, 14, 29),
VALUE(TEXT(Implant_commitment_perc_input__c))*0.01, 0)</formula>
    <label>Implant commitment (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Implant_commitment_perc_input__c</fullName>
    <label>Implant commitment (%)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>90</fullName>
        </value>
        <value>
          <fullName>100</fullName>
        </value>
        <value>
          <fullName>110</fullName>
        </value>
        <value>
          <fullName>120</fullName>
        </value>
        <value>
          <fullName>130</fullName>
        </value>
        <value>
          <fullName>80</fullName>
          <isActive>false</isActive>
          <label>80</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Implant_forecast__c</fullName>
    <inlineHelpText>Only applicable for new customers</inlineHelpText>
    <label>Implant estimation/correction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Implant_volume_L12M__c</fullName>
    <label>Implant volume L12M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Implant_volume_L12M_form__c</fullName>
    <formula>Implant_volume_L12M__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implant volume L12M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>ImplantsBasisForAllowance__c</fullName>
    <formula>IF(New_customer__c = False &amp;&amp; Correction_of_sales_needed__c = False, Implant_volume_L12M__c, Implant_forecast__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implants: basis for allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Implants_sold_first_14_days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Implants sold first 14 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Invoiced_Within_Ageement__c</fullName>
    <description>Shows what has been invoiced within Agreement</description>
    <inlineHelpText>Shows what has been invoiced within Agreement</inlineHelpText>
    <label>Invoiced Within Ageement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Invoiced_within_agreement_formula__c</fullName>
    <formula>Invoiced_Within_Ageement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced within agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>IsSureSmileCustomer__c</fullName>
    <description>TFUS-000003033</description>
    <label>SureSmile Customer</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No</fullName>
        </value>
        <value>
          <fullName>Yes</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Is_pooled_order_commitment_fulfilled_for__c</fullName>
    <formula>Pooling_period_ended__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is pooled order commitment fulfilled?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Last_Approval_Change_Date__c</fullName>
    <description>The date when the Approval Status last changed</description>
    <inlineHelpText>The date when the Approval Status last changed</inlineHelpText>
    <label>Last Approval Change Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>LegalPracticeName__c</fullName>
    <description>TFUS-000003033</description>
    <label>Legal Practice Name</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Max_Approved_Discount__c</fullName>
    <label>Max Approved Discount (%)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Max_order_value__c</fullName>
    <description>Used for finding the largest order value connected to the contract, in order to check order pooling</description>
    <label>Max_order_value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Movex_Contract_No__c</fullName>
    <description>This field shows the Contract No coming from Movex.</description>
    <inlineHelpText>This field shows the Contract No coming from Movex.</inlineHelpText>
    <label>Movex Contract No</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Movex_Contract_Type__c</fullName>
    <description>The Contract Type stated in Movex</description>
    <inlineHelpText>The Contract Type stated in Movex</inlineHelpText>
    <label>Movex Contract Type</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Movex_template__c</fullName>
    <description>Used for identifying the corresponding template in Movex based on the contract discount values</description>
    <label>Movex template</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Negative_discount_equipment__c</fullName>
    <formula>IF( Previous_contract__r.Deserved_discount_equipment__c - Previous_contract__r.Allowed_discount_Implants_equipment__c &lt; 0, Previous_contract__r.Deserved_discount_equipment__c - Previous_contract__r.Allowed_discount_Implants_equipment__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative discount, equipment</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Negative_discount_materials__c</fullName>
    <formula>IF( Previous_contract__r.Deserved_discount_materials__c - Previous_contract__r.Allowed_discount_Implants_materials__c &lt; 0, Previous_contract__r.Deserved_discount_materials__c - Previous_contract__r.Allowed_discount_Implants_materials__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative discount, materials</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>New_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New customer?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Ordered_Within_Agreement__c</fullName>
    <description>The Quantity/Value that has been ordered within the Purchasing Agreement</description>
    <inlineHelpText>The Quantity/Value that has been ordered within the Purchasing Agreement</inlineHelpText>
    <label>Ordered Within Agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Ordered_vs_Projected_Target_Value__c</fullName>
    <formula>Ordered_Within_Agreement__c -( Contract_Time_Elapsed__c * Contract_Value_D__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordered vs Projected Target (Value)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Ordered_within_agreement_formula__c</fullName>
    <formula>Ordered_Within_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordered within agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Owners_Managers_Email_DE__c</fullName>
    <description>Sets the owners manager according to the Manager field on the user record. Used for DE 95% contract fulfillment emails. Should not be visible on Page Layout.</description>
    <inlineHelpText>Sets the owners manager according to the Manager field on the user record. Used for DE 95% contract fulfillment emails. Should not be visible on Page Layout.</inlineHelpText>
    <label>Owners Managers Email (DE)</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>Payment_discount__c</fullName>
    <label>Payment discount</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>0</fullName>
        </value>
        <value>
          <fullName>2</fullName>
        </value>
        <value>
          <fullName>3</fullName>
        </value>
        <value>
          <fullName>4</fullName>
        </value>
        <value>
          <fullName>5</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Payment_terms__c</fullName>
    <formula>Account.Payment_Terms_D_JP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment terms</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Pooled_order_commitment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>If the customer agrees to commit to place a pooled order during the contract period</description>
    <label>Pooled order commitment?</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Pooled_order_commitment_formula__c</fullName>
    <formula>Pooled_order_commitment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pooled order commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Pooled_order_commitment_perc__c</fullName>
    <formula>IF(
TEXT(Pooled_order_commitment_perc_input__c) = "10", 0.1,
IF(ISPICKVAL(Pooled_order_commitment_perc_input__c, "30"), 0.3,
IF(ISPICKVAL(Pooled_order_commitment_perc_input__c, "50"), 0.5,
IF(ISPICKVAL(Pooled_order_commitment_perc_input__c, "100"), 1,
IF(ISPICKVAL(Pooled_order_commitment_perc_input__c, "&gt;100"), 1.01,0
)))))</formula>
    <label>Pooled order commitment (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Pooled_order_commitment_perc_input__c</fullName>
    <label>Pooled order commitment (#)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>10</fullName>
        </value>
        <value>
          <fullName>30</fullName>
        </value>
        <value>
          <fullName>50</fullName>
        </value>
        <value>
          <fullName>100</fullName>
        </value>
        <value>
          <fullName>&gt;100</fullName>
        </value>
        <value>
          <fullName>&lt;60%</fullName>
          <isActive>false</isActive>
          <label>&lt;60%</label>
        </value>
        <value>
          <fullName>≥100%</fullName>
          <isActive>false</isActive>
          <label>≥100%</label>
        </value>
        <value>
          <fullName>≥60%</fullName>
          <isActive>false</isActive>
          <label>≥60%</label>
        </value>
        <value>
          <fullName>≥70%</fullName>
          <isActive>false</isActive>
          <label>≥70%</label>
        </value>
        <value>
          <fullName>≥80%</fullName>
          <isActive>false</isActive>
          <label>≥80%</label>
        </value>
        <value>
          <fullName>≥90%</fullName>
          <isActive>false</isActive>
          <label>≥90%</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Pooling_period_ended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is pooled order commitment fulfilled?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Previous_contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous contract</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Contract.AccountId</field>
        <operation>equals</operation>
        <valueField>$Source.AccountId</valueField>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Previous contract</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Price__c</fullName>
    <description>The value of the Contract. Used in Vouchers</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>PromotionalCode__c</fullName>
    <description>TFUS-000003033</description>
    <label>Promotional Code</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Provided_discount_previous_contract__c</fullName>
    <formula>Previous_contract__r.Allowed_discount_Implants_materials__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provided discount, previous contract (m)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Purchase_Contract_External_ID__c</fullName>
    <description>This is the primary contract external id. If there is a match between Movex and SFDC in this field the contract or voucher is updated. If not it the other Contract external ID is checked. This is used to cater for the scenario that a Contract (not a Voucher) should never be inserted, while the Voucher can be inserted.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the primary contract external id. If there is a match between Movex and SFDC in this field the contract or voucher is updated. If not it the other Contract external ID is checked. This is used to cater for the scenario that a Contract (not a Vouch</inlineHelpText>
    <label>Purchase Contract External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>QuarterlyCaseMinimum__c</fullName>
    <defaultValue>0</defaultValue>
    <description>TFUS-000003033</description>
    <label>Quarterly Case Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Rem_Invoiced_within_Agreement_formula__c</fullName>
    <formula>Remaining_Invoiced_within_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaning Invoiced within Agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Rem_Ordered_within_Agreement_formula__c</fullName>
    <formula>Remaining_Ordered_within_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaning Ordered within Agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Remaining_Invoiced_within_Agreement__c</fullName>
    <label>Remaining Invoiced Within Agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Remaining_Ordered_within_Agreement__c</fullName>
    <description>Shows how much is remaining to be ordered within the Agreement</description>
    <inlineHelpText>Shows how much is remaining to be ordered within the Agreement</inlineHelpText>
    <label>Remaining Ordered within Agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Remaining_Value__c</fullName>
    <label>Remaining Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Remaining_within_Agreement__c</fullName>
    <label>Remaining within Agreement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Remains_impl_material__c</fullName>
    <formula>IF( AND(New_customer__c = False, Sales_Correction__c = False, Correction_of_sales_needed__c =false), 
IF((Row_discount_impl_mat__r.Max_perc__c* Implant_volume_L12M__c - Implant_commitment_abs__c )&gt;0, (Row_discount_impl_mat__r.Max_perc__c* Implant_volume_L12M__c - Implant_commitment_abs__c), null), 
IF((Row_discount_impl_mat__r.Max_perc__c* Implant_forecast__c - Implant_commitment_abs__c)&gt;0, (Row_discount_impl_mat__r.Max_perc__c* Implant_forecast__c - Implant_commitment_abs__c), null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remains to next level of discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Remains_rev_material__c</fullName>
    <formula>IF( AND(New_customer__c = False , Sales_Correction__c = False, Correction_of_sales_needed__c =false), 
IF((Row_discount_rev_mat__r.Max__c - Sales_L12M__c)&gt;0, (Row_discount_rev_mat__r.Max__c - Sales_L12M__c), null), 
IF((Row_discount_rev_mat__r.Max__c - Revenue_forecast__c)&gt;0, (Row_discount_rev_mat__r.Max__c - Revenue_forecast__c), null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remains to next level of discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Revenue_basis_for_allowance__c</fullName>
    <formula>IF(New_customer__c = False &amp;&amp; Sales_Correction__c = False, Sales_L12M__c , Revenue_forecast__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue: basis for allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Revenue_forecast__c</fullName>
    <inlineHelpText>Only applicable for new customers</inlineHelpText>
    <label>Sales estimation/correction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Row_discount_impl_mat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Row discount impl mat</label>
    <referenceTo>Discount_row__c</referenceTo>
    <relationshipLabel>Contracts (Row discount impl mat)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Row_discount_rev_mat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Row discount rev mat</label>
    <referenceTo>Discount_row__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>SAPTemplateDescription__c</fullName>
    <label>Template Description</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SAPTemplateID__c</fullName>
    <label>Template ID</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SAP_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>SAP_ID__c</fullName>
    <externalId>true</externalId>
    <label>SAP ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Sales_Correction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Correction</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Sales_L12M__c</fullName>
    <label>Sales L12M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Sales_L12M_form__c</fullName>
    <formula>Sales_L12M__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales L12M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Sales_L24M__c</fullName>
    <label>Sales L24M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Sales_starter_package__c</fullName>
    <label>Sales starter package</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Several_Customer_numbers__c</fullName>
    <formula>IF( Several_Customer_numbers_text__c  &lt;&gt;  "", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Several Customer numbers</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Several_Customer_numbers_text__c</fullName>
    <label>Several Customer numbers (text)</label>
    <length>60</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Siroforce_Status__c</fullName>
    <label>Siroforce Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Active</fullName>
        </value>
        <value>
          <fullName>Inactive</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Sold_Implants_During_Contract_Period__c</fullName>
    <inlineHelpText>To be filled by trigger/batch?</inlineHelpText>
    <label>Sold Implants During Contract Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SourceRecordCustomerId__c</fullName>
    <description>Used for Mail Merge templates</description>
    <formula>SourceRecord__r.Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Record Customer Id</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SourceRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Record</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>$Source.AccountId</field>
        <operation>equals</operation>
        <valueField>Source_Record__c.CIM_Account__r.Id</valueField>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Source_Record__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>SureSmileCustomerNumber__c</fullName>
    <description>TFUS-000003033</description>
    <label>SureSmile Practice Id</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Target_Value__c</fullName>
    <description>The Value that should have been ordered to keep in line with the target. 
Example: for a contract with 100 implants created on jan 1st lasting until dec 31th, On Mar 1st target is 25 implants, Jul 1st 50 implants etc.</description>
    <formula>Contract_Value_D__c * Contract_Time_Elapsed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Value that should have been ordered to keep in line with the target. 
Example: for a contract with 100 implants created on jan 1st lasting until dec 31th, On Mar 1st target is 25 implants, Jul 1st 50 implants etc.</inlineHelpText>
    <label>Projected Target Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Total_Sales_During_Contract_Period__c</fullName>
    <inlineHelpText>To be set by trigger/batch?</inlineHelpText>
    <label>Total Sales During Contract Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Type_of_Contract__c</fullName>
    <label>Type of Contract</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Voucher</fullName>
        </value>
        <value>
          <fullName>Subscription</fullName>
        </value>
        <value>
          <fullName>Loyalty Program</fullName>
        </value>
        <value>
          <fullName>Contract</fullName>
        </value>
        <value>
          <fullName>DS Activate</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Voucher_Type__c</fullName>
    <description>The Type of Voucher. Based on information from Movex. Read only field for all profiles</description>
    <inlineHelpText>The Type of Voucher. Based on information from Movex.</inlineHelpText>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Contract_Type__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Voucher - Conversion</fullName>
        </value>
        <value>
          <fullName>Voucher - Pilot</fullName>
        </value>
        <value>
          <fullName>Voucher - Planning Assistance</fullName>
        </value>
        <value>
          <fullName>Voucher - Safe</fullName>
        </value>
        <value>
          <fullName>Voucher - Universal</fullName>
        </value>
        <value>
          <fullName>Voucher - Wafers</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>follow_on_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to divide between first pricing contract and follow-on contracts (DE)</description>
    <label>follow-on contract</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>signed_contract_sent_back__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to track if the contract was sent back from customer</description>
    <inlineHelpText>activate this checkbox when contract is send back from customer</inlineHelpText>
    <label>signed contract sent back</label>
    <type>Checkbox</type>
  </fields>
  <listViews>
    <fullName>AllActivatedContracts</fullName>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CONTRACT.STATUS_CODE</field>
      <operation>equals</operation>
      <value>A</value>
    </filters>
    <label>All Activated Contracts</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CONTRACT.RECORDTYPE</field>
      <operation>equals</operation>
      <value>,01220000000AKPw,01220000000AKQ1</value>
    </filters>
    <label>All Contracts</label>
    <language>en_US</language>
    <sharedTo />
  </listViews>
  <listViews>
    <fullName>AllDraftContracts</fullName>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CONTRACT.STATUS_CODE</field>
      <operation>equals</operation>
      <value>D</value>
    </filters>
    <label>All Draft Contracts</label>
  </listViews>
  <listViews>
    <fullName>AllInApprovalContracts</fullName>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CONTRACT.STATUS_CODE</field>
      <operation>equals</operation>
      <value>P</value>
    </filters>
    <label>All In Approval Contracts</label>
  </listViews>
  <listViews>
    <fullName>DE_Pricing_Vertr_ge_4_Wochen_Restzeit</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
      <field>CONTRACT.RECORDTYPE</field>
      <operation>equals</operation>
      <value>Contract.Pricing_contract</value>
    </filters>
    <filters>
      <field>Days_until_Expiration__c</field>
      <operation>lessOrEqual</operation>
      <value>30</value>
    </filters>
    <label>DE: Pricing Verträge &lt; 4 Wochen Restzeit</label>
    <language>de</language>
    <sharedTo>
      <group>D_A_CH_ADMIN</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>MyActivatedContracts</fullName>
    <filterScope>Mine</filterScope>
    <filters>
      <field>CONTRACT.STATUS_CODE</field>
      <operation>equals</operation>
      <value>A</value>
    </filters>
    <label>My Activated Contracts</label>
  </listViews>
  <listViews>
    <fullName>MyDraftContracts</fullName>
    <filterScope>Mine</filterScope>
    <filters>
      <field>CONTRACT.STATUS_CODE</field>
      <operation>equals</operation>
      <value>D</value>
    </filters>
    <label>My Draft Contracts</label>
  </listViews>
  <listViews>
    <fullName>MyInApprovalContracts</fullName>
    <filterScope>Mine</filterScope>
    <filters>
      <field>CONTRACT.STATUS_CODE</field>
      <operation>equals</operation>
      <value>P</value>
    </filters>
    <label>My In Approval Contracts</label>
  </listViews>
  <recordTypes>
    <active>true</active>
    <description>Intended to be the global contract record type - first version is a very basic contract launched in BeNeLux</description>
    <fullName>Contract</fullName>
    <label>Contract</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <description>TFUS-000003033</description>
    <fullName>Customer_Agreement</fullName>
    <label>Customer Agreement</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <description>Not integrated with Movex</description>
    <fullName>Manual_Implant_Quantity_Contract</fullName>
    <label>Manual Implant Quantity Contract</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <description>Used for contracts based on the new Discount Model for IMPL DE</description>
    <fullName>Pricing_contract</fullName>
    <label>Pricing contract</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <description>Use this Record Type when you create a Purchasing Contract</description>
    <fullName>Purchasing_Contract_Turnover</fullName>
    <label>Purchasing Contract</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>Simplant_Voucher</fullName>
    <label>Simplant Voucher</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>siroForceIntegration</fullName>
    <label>siroForceIntegration</label>
  </recordTypes>
  <sharingModel>Private</sharingModel>
  <validationRules>
    <fullName>Allow_abutment_commitment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Abutment_commitment_perc__c &gt;= 0.80,  OR(Implant_commitment_perc__c &lt; 0.90, ISNULL(Implant_commitment_perc__c)))</errorConditionFormula>
    <errorDisplayField>Abutment_commitment_pick__c</errorDisplayField>
    <errorMessage>You cannot use abutment commitment if the customer do not commit to more than 90% of last year's implants volume</errorMessage>
  </validationRules>
</CustomObject>